# pico-midi

./: CMakeLists.txt
src/: main.c  tusb_config.h
